<resources>
    <string name="app_name">BoxOFFICE 4 CUK</string>
    <string name="name_tab1_movies">Movies</string>
    <string name="name_tab2_tvshow">TV Show</string>
    <string name="name_setting_lang">Language Settings</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="desc_img">Images</string>
    <string name="str_overview">OVERVIEW</string>
    <string name="str_detail">Details</string>
    <string name="str_no_internet">No internet connection..</string>
    <string name="str_try_again">Try Again</string>
    <string name="str_reconnect">Connection to network..</string>
    <string name="str_wrong_net">Network error eccurred..</string>
    <string name="str_error_wrong">There is an error..</string>

    <string name="title_activity_test">TESTActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">My Favorites</string>
    <string name="tap_to_close">Tap 2x for exit</string>
    <string name="str_msg_add_fav">Added on my favorite list..</string>
    <string name="str_msg_delete_fav">Remove from my favorite list..</string>
    <string name="movies_empty">Your favorite list movies is empty</string>
    <string name="empty_tvshows">Your favorite list Tv Show is empty..</string>
</resources>
