<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_coordinator_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".myactivity.DetailsMovieActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapse_toolbar_detail"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:fitsSystemWindows="true"
            app:contentScrim="?colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/img_bg_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:src="@drawable/dr_stone_bg"
                tools:targetApi="m" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorTransparantBlack" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/appbar_size"
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                app:title="@string/str_detail" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_favorite_false"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toEndOf="@+id/card_view_img_detail"
                app:layout_constraintStart_toStartOf="@+id/card_view_img_detail"
                app:layout_constraintTop_toBottomOf="@+id/view"
                app:layout_constraintVertical_bias="0.0"
                app:rippleColor="@color/colorWhite"
                app:srcCompat="@drawable/ic_favorite_border_before" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toEndOf="@+id/card_view_img_detail"
                app:layout_constraintStart_toStartOf="@+id/card_view_img_detail"
                app:layout_constraintTop_toBottomOf="@+id/view"
                app:layout_constraintVertical_bias="0.0"
                app:rippleColor="@color/colorWhite"
                app:srcCompat="@drawable/ic_favorite_true_24dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_img_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="@dimen/size_corner_low"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <ImageView
                    android:id="@+id/img_movie_photo_detail"
                    android:layout_width="130dp"
                    android:layout_height="180dp"
                    android:contentDescription="@string/desc_img"
                    android:focusable="true"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/dr_stone" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_title_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:maxLines="4"
                android:textAlignment="textStart"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tv_release_date_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/card_view_img_detail"
                tools:text="Dr. Stone (2019)" />

            <TextView
                android:id="@+id/tv_rating_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_corner_full"
                android:drawableEnd="@drawable/ic_star_black_24dp"
                android:drawablePadding="3dp"
                android:fontFamily="sans-serif-medium"
                android:textSize="@dimen/size_text_low"
                app:layout_constraintBottom_toBottomOf="@+id/card_view_img_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/card_view_img_detail"
                tools:text="9.8" />

            <TextView
                android:id="@+id/tv_vote_count_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/bg_corner_full"
                android:drawableEnd="@drawable/ic_favorite_black_24dp"
                android:drawablePadding="3dp"
                android:fontFamily="sans-serif-medium"
                android:textSize="@dimen/size_text_low"
                app:layout_constraintBottom_toBottomOf="@+id/tv_rating_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tv_rating_detail"
                app:layout_constraintTop_toTopOf="@+id/tv_rating_detail"
                app:layout_constraintVertical_bias="0.0"
                tools:text="123 voting" />

            <TextView
                android:id="@+id/tv_release_date_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_corner_full"
                android:drawableEnd="@drawable/ic_date_range_black_24dp"
                android:drawablePadding="3dp"
                android:fontFamily="sans-serif-medium"
                android:textSize="@dimen/size_text_low"
                app:layout_constraintBottom_toTopOf="@+id/tv_rating_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/card_view_img_detail"
                tools:text="05 July 2019" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_view_img_detail" />

            <View
                android:id="@+id/view_bg_overview"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/bg_corner_radius"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_overview_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableEnd="@drawable/ic_description_black_24dp"
                android:drawablePadding="6dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/str_overview"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/view_bg_overview"
                app:layout_constraintHorizontal_bias="0.48"
                app:layout_constraintStart_toStartOf="@+id/view_bg_overview"
                app:layout_constraintTop_toTopOf="@+id/view_bg_overview" />

            <View
                android:id="@+id/view_divider1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/colorDivider"
                app:layout_constraintEnd_toEndOf="@+id/tv_overview_detail"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_overview_detail"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview_detail" />

            <TextView
                android:id="@+id/tv_desc_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-medium"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toTopOf="@+id/view_bg_overview"
                app:layout_constraintEnd_toEndOf="@+id/view_bg_overview"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/view_bg_overview"
                app:layout_constraintTop_toBottomOf="@+id/view_divider1"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@string/lorem" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>